# DocxFactory

./: CMakeLists.txt  COMPILING.md  README.md
.github/workflows/: ci.yml
cmake/: FindZint.cmake
gmake/: Makefile
include/DocxFactory/ConverterPrinter/: MsOfficeUtil.h
include/DocxFactory/WordProcessingCompiler/: dfwc.h
include/DocxFactory/WordProcessingMerger/: dfw.h
include/DocxFactory/console/: getopt.h
include/DocxFactory/zip/: FileInfo.h  UnzipFile.h  ZipFile.h  ZipFunc.h
python/: DocxFactory_wrap.cxx  docxfactory.py  setup.py
src/ConverterPrinter/: MsOfficeUtil.cpp
src/DocxCompiler/: DocxCompilerBarcodeField.cpp
src/DocxMerger/: DocxMergerFile.cpp
src/WordProcessingCompiler/: WordProcessingCompiler.cpp
src/WordProcessingMerger/: WordProcessingMerger.cpp  dfw.cpp
src/barcode/: BarcodeFunc.cpp
src/locale/: LocaleFunc.cpp
src/opc/: OpcImageFile.cpp
src/win/: WinFunc.cpp
src/zip/: ZipFunc.cpp
